[5.0] Fix update in deployment examples

--- a/modules/ROOT/pages/depl-examples/ubuntu-compose/ubuntu-compose-prod.adoc
+++ b/modules/ROOT/pages/depl-examples/ubuntu-compose/ubuntu-compose-prod.adoc
@@ -93,6 +93,6 @@ include::partial$depl-examples/ubuntu-compose/shared-setup.adoc[tags=shared_1;sh
 
 Note that this deploymment can only be updated within Infinite Scale v5.
 
-If a new Infinite Scale v5 version is available, just down the compose environment and bring it back up. Containers will update automatically and you can continue using Infinite Scale as usual.
+If a new Infinite Scale v5 version is available, you must stop the compose environment with `docker compose down`, pull the new image with `docker compose pull` and start the compose environment with `docker compose up -d` again. You can use the `latest` tag in the `OCIS_DOCKER_TAG` variable as it will automatically point to the latest available production release.
 
 {empty} +
