--- a/modules/ROOT/pages/depl-examples/minimal-bare-metal.adoc
+++ b/modules/ROOT/pages/depl-examples/minimal-bare-metal.adoc
@@ -17,9 +17,11 @@ include::partial$multi-location/compose-version.adoc[]
 
 == Introduction
 
-{description} It does not cover extended deployment tasks or how to manage trusted certificates etc. and is intended to get a first hands-on experience of the system.
+{description} It does not cover extended deployment tasks, how to manage trusted certificates, run online office applications etc. and is intended to get a first hands-on experience of the system only.
 
 For a small production environment using the binary installation approach, see the xref:depl-examples/bare-metal.adoc[Bare Metal Deployment with systemd]. The main differences between this setup and the small production environment using the binary installation is, in a nutshell, the use of systemd, LetsEncrypt and a reverse proxy.
+
+Note that there is a difference in internal thumbnail processing when using binary vs container deployments. For details see the xref:{s-path}/thumbnails.adoc#thumbnailing-performance[thumbnails] service.
 
 [IMPORTANT]
 ====
