--- a/modules/ROOT/pages/deployment/services/s-list/antivirus.adoc
+++ b/modules/ROOT/pages/deployment/services/s-list/antivirus.adoc
@@ -23,6 +23,12 @@ The antivirus service currently supports https://tools.ietf.org/html/rfc3507[ICA
 
 Several factors can make it necessary to limit the maximum file size the antivirus service will use for scanning. Use the `ANTIVIRUS_MAX_SCAN_SIZE` environment variable to scan only a given amount of bytes. Obviously, it is recommended to scan the whole file, but several factors like scanner type and version, bandwidth, performance issues, etc. might make a limit necessary.
 
+IMPORTANT: To prevent _Out or Memory_ errors, `ANTIVIRUS_MAX_SCAN_SIZE` needs to be set lower than available RAM.
+
+=== Antivirus Workers
+
+The number of concurrent scans can be increased by setting `ANTIVIRUS_WORKERS`. Be aware that this will also increase memory usage.
+
 === Infected File Handling
 
 The antivirus service allows three different ways of handling infected files. Those can be set via the `ANTIVIRUS_INFECTED_FILE_HANDLING` environment variable:
@@ -44,6 +50,10 @@ The antivirus service can scan files during `post-processing`. `on demand` scann
 === Post-processing
 
 The antivirus service will scan files during post-processing. It listens for a post-processing step called `virusscan`. This step can be added in the environment variable `POSTPROCESSING_STEPS`. Read the documentation of the xref:{s-path}/postprocessing.adoc[postprocessing service] for more details.
+
+=== Scaling in Kubernetes
+
+In kubernetes, `ANTIVIRUS_WORKERS` and `ANTIVIRUS_MAX_SCAN_SIZE` can be used to trigger the horizontal pod autoscaler by requesting a memory size that is below `ANTIVIRUS_MAX_SCAN_SIZE`. Keep in mind that `ANTIVIRUS_MAX_SCAN_SIZE` amount of memory might be held by `ANTIVIRUS_WORKERS` number of go routines.
 
 == Event Bus Configuration
 
