--- a/modules/ROOT/pages/deployment/services/s-list/storage-system.adoc
+++ b/modules/ROOT/pages/deployment/services/s-list/storage-system.adoc
@@ -14,10 +14,10 @@
 
 == Caching
 
-// renders dependent on is_cache or is_stat
+// renders dependent on is_cache or is_store
 :is_cache: true
 
-include::partial$multi-location/caching-list.adoc[]
+include::partial$multi-location/cache-store.adoc[]
 
 == Event Bus Configuration
 
